@@ -5,9 +5,6 @@ depcomp
 pyext/build/
 .libs
 .deps
-test/*.fits
-test/.samp
-examples/python/*.fits
 inst/cta/test/*.xml
 inst/cta/test/*.fits
 inst/cta/test/*.fits.gz
@@ -81,29 +78,7 @@ src/template/test_GClass
 doc/Doxyfile.bak
 testconf.sh
 
-test/test_url.dat
-test/*.xml
-test/reports/*.xml
-test/*.trs
-test/region.reg
-test/test_python.sh
-test/test_examples.sh
-test/test_csv*.dat
-test/dev/*.fits
-test/dev/*.xml
-
-examples/python/*.xml
-examples/python/*.html
-examples/cpp/createfits
-examples/cpp/createskymap
-examples/cpp/createxml
-examples/cpp/readmodel
-examples/cpp/numerics
-examples/cpp/optimize
-examples/cpp/interpolate
-examples/cpp/readmodel
-
-# Binaries
+# Test folder
 test/test_GApplication
 test/test_GFits
 test/test_GMatrix
@@ -123,4 +98,26 @@ test/test_LAT
 test/test_MWL
 test/test_CTA
 test/test_COM
+test/region.reg
+test/.samp
 test/test_python.sh
+test/test_examples.sh
+test/*.fits
+test/*.xml
+test/*.trs
+test/*.html
+test/test_csv*.dat
+test/test_url.dat
+test/reports/*.xml
+test/dev/*.fits
+test/dev/*.xml
+
+# Examples folder
+examples/cpp/createfits
+examples/cpp/createskymap
+examples/cpp/createxml
+examples/cpp/readmodel
+examples/cpp/numerics
+examples/cpp/optimize
+examples/cpp/interpolate
+examples/cpp/readmodel
