@@ -2,7 +2,7 @@ New Features and Important Changes in GammaLib 1.1.0
 
 Author(s) : Juergen Knoedlseder
 
-23 June 2016
+24 June 2016
 
 
 1. Introduction
